--- a/css/style.css
+++ b/css/style.css
@@ -3205,7 +3205,7 @@ span.skill {
 	-------------------------------------------------------------------*/
 
 .testmonial_section {
-	background-image: url('../images/truck2.jpg');
+	background-image: url('../images/truck5.jpg');
 	/* background-color: yellow; */
 	background-size: cover;
 	padding-bottom: 185px;
@@ -4895,3 +4895,29 @@ footer ul.social_icons {
 	margin-top: 35px;
 }
 
+#backtop {
+	position: fixed;
+	  left:auto;right: 20px;top:auto;bottom: 20px;
+	outline: none;
+	  overflow:hidden;
+	  color:#fff;
+	  text-align:center;
+	  background-color:rgba(49,79,96,0.84);
+	  height:40px;
+	  width:40px;
+	  line-height:40px;
+	  font-size:14px;
+	  border-radius:2px;
+	  cursor:pointer;
+	  transition:all 0.3s linear;
+	  z-index:999999;
+  
+	  opacity:1;
+	  display:none;
+  }
+  #backtop:hover {
+	  background-color:#27CFC3;
+  }
+  #backtop.mcOut {
+	  opacity:0;
+  }
