--- a/css/style.css
+++ b/css/style.css
@@ -4916,7 +4916,7 @@ footer ul.social_icons {
 	  display:none;
   }
   #backtop:hover {
-	  background-color:#27CFC3;
+	  background-color:#17a5e9;
   }
   #backtop.mcOut {
 	  opacity:0;
