--- a/css/style.css
+++ b/css/style.css
@@ -3205,14 +3205,14 @@ span.skill {
 	-------------------------------------------------------------------*/
 
 .testmonial_section {
-	background-image: url('../images/truck5.jpg');
+	background-image: url('../images/Truck5.jpg');
 	/* background-color: yellow; */
 	background-size: cover;
 	padding-bottom: 185px;
 }
 
 .cleaning .testmonial_section {
-	background-image: url('../images/service1.jpeg');
+	background-image: url('images/service1.jpeg');
 	background-size: cover;
 	padding-bottom: 185px;
 }
